WRP-3261 resolutions for the following styling bugs in dark theme: alignment of classification editing panel is off, “added” classification text is hard to read in dark theme, unnecessary spacing in dark theme, header is also hard to read.

--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -412,3 +412,6 @@
 .snodragon-templates:active  {background:#0082b3; color:#fff}
 
 
+.dark-button {background-color: rgba(0, 0, 0, 0.2)!important; color:#fff!important;}
+.dark-button:hover,
+.dark-button:active {background-color: rgba(0, 0, 0, 0.3) !important; color:#fff!important;}
