--- a/app/styles/dark.scss
+++ b/app/styles/dark.scss
@@ -810,3 +810,17 @@ sca-dark .pull-left.follow-up {
     color: #e94281;
 }
 .sca-dark .btn[disabled] {color:#666;}
+
+.sca-dark .report-header-main {
+
+    background-color: #262e39;
+   
+}
+
+.sca-dark .classification-header {
+    color: #fff;
+    background-color: #33691e;
+}
+.sca-dark  .green-text {
+    color: #8bc34a;
+}
